--- a/travels/templates/registration/login.html
+++ b/travels/templates/registration/login.html
@@ -1,33 +1,52 @@
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  </head>
+    {% comment %} <div class="content-section">
+        <form method="POST"> {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Log In</legend>
+                {{ form.as_p }} 
+            </fieldset>            
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Login</button>
+            </div>
+        </form>
 
-  <body>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Need an account? <a class="ml-2" href="{% url 'travels:register' %}">Sign Up Now</a>
+            </small>
+        </div>
 
-    <div class="content-section">
-      <form method="POST">
-          {% csrf_token %}
-          <fieldset class="form-group">
-              <legend class="border-bottom mb-4">Log In</legend>
-              {{ form|crispy }} 
-          </fieldset>
-          <div class="form-group">
-              <button class="btn btn-outline-info" type="submit">Login</button>
-          </div>
-      </form>
-      <div class="border-top pt-3">
-          <small class="text-muted">
-              Need an account? <a class="ml-2" href="{% url 'travels:register' %}">Sign Up Now</a>
-          </small>
-      </div>
-  </div>
-    
-</body>
+    </div> {% endcomment %}
 
-</html>
+    <div class="login-box">
+        <h2>Login</h2>
+        <form method = "POST">
+            {% csrf_token %}
+            <div class="user-box">
+                <input type="text" name="username" required=""/>
+                <label>Username</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="password" required="" readonly onfocus="this.removeAttribute('readonly');"/>
+                <label>Password</label>
+            </div>
+            <a href="{% url 'travels:index' %}">
+                Back
+            </a>
+            <button id = "submit-button" type = "submit" style="float: right;">
+                LogIn
+            </button>
+        </form>
+        <div class = "mt-4">
+            <small class="text-muted">
+                Need an account? <a class="ml-2" href="{% url 'travels:register' %}" style = "color: white;">Sign Up Now</a>
+            </small>
+        </div>
+    </div>
+
+
+{% endblock content %}
