added login view

--- a/travels/templates/dashboard.html
+++ b/travels/templates/dashboard.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-    <button>
-        <a href = "{% url 'travels:logout' %}"> Logout </a>
-    </button>
+    <a class="btn btn-outline-light btn-lg mr-1" role="button" href = "{% url 'travels:logout' %}"> Logout </a>
+    
 
 {% endblock content %}
