--- a/travels/templates/index.html
+++ b/travels/templates/index.html
@@ -1,14 +1,56 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% if user.is_authenticated %}
 
-        <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:dashboard' %}" role = "button"> Go to Dashboard </a>
+    <style>
+        body, html {
+        height: 100%;
+        }
 
-    {% else %}
+        * {
+        box-sizing: border-box;
+        }
 
-        <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:login' %}" role = "button"> Login </a>
-    
-    {% endif %}
+        .bg-image {
+        background-image: url("https://www.thenewsminute.com/sites/default/files/styles/w750xh500/public/Metro-Train-Inside-1200-PTI.jpg?itok=wiJmJfvA");
+
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+
+        height: 100%;
+
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        }
+
+        .bg-text {
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0, 0.4); 
+        color: white;
+        font-weight: bold;
+        border: 3px solid #f1f1f1;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        width: 80%;
+        padding: 20px;
+        text-align: center;
+        }
+    </style>
+
+    <div class="bg-image"></div>
+
+    <div class="bg-text">
+        <h1>Safe Journey</h1>
+        <p>Happy Journey</p>
+        {% if user.is_authenticated %}
+            <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:dashboard' %}" role = "button"> Go to Dashboard </a>
+        {% else %}
+            <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:login' %}" role = "button"> Get Started! </a>
+        {% endif %}
+    </div>
 
 {% endblock content %}
