--- a/travels/templates/login.html
+++ b/travels/templates/login.html
@@ -29,7 +29,7 @@
         </form>
         <div class = "mt-4">
             <small class="text-muted">
-                Need an account? <a class="ml-2" href="{% url 'travels:register' %}" style = "color: white;">Sign Up Now</a>
+                Need an account? <a href="{% url 'travels:register' %}" style = "color: white; padding: 4px 10px 4px 10px; text-decoration: none; border-radius: 15px">Sign Up Now</a>
             </small>
         </div>
     </div>
