--- a/travels/templates/index.html
+++ b/travels/templates/index.html
@@ -4,40 +4,40 @@
 
     <style>
         body, html {
-        height: 100%;
+            height: 100%;
         }
 
         * {
-        box-sizing: border-box;
+            box-sizing: border-box;
         }
 
         .bg-image {
-        background-image: url("https://www.thenewsminute.com/sites/default/files/styles/w750xh500/public/Metro-Train-Inside-1200-PTI.jpg?itok=wiJmJfvA");
+            background-image: url("https://www.thenewsminute.com/sites/default/files/styles/w750xh500/public/Metro-Train-Inside-1200-PTI.jpg?itok=wiJmJfvA");
 
         filter: blur(8px);
-        -webkit-filter: blur(8px);
+            -webkit-filter: blur(8px);
 
-        height: 100%;
+            height: 100%;
 
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
         .bg-text {
-        background-color: rgb(0,0,0); 
-        background-color: rgba(0,0,0, 0.4); 
-        color: white;
-        font-weight: bold;
-        border: 3px solid #f1f1f1;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 2;
-        width: 80%;
-        padding: 20px;
-        text-align: center;
+            background-color: rgb(0,0,0); 
+            background-color: rgba(0,0,0, 0.4); 
+            color: white;
+            font-weight: bold;
+            border: 3px solid #f1f1f1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+            width: 80%;
+            padding: 20px;
+            text-align: center;
         }
     </style>
 
@@ -47,7 +47,7 @@
         <h1>Safe Journey</h1>
         <p>Happy Journey</p>
         {% if user.is_authenticated %}
-            <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:dashboard' %}" role = "button"> Go to Dashboard </a>
+            <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:dashboard' %}" role = "button"> Get Started! </a>
         {% else %}
             <a class="btn btn-outline-light btn-lg mr-1" href = "{% url 'travels:login' %}" role = "button"> Get Started! </a>
         {% endif %}
