error style changes

--- a/travels/templates/register.html
+++ b/travels/templates/register.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+    <style>
+        .errorlist{
+            list-style-type:none ;
+            color: red;
+            padding: 0;
+        }
+    </style>
+
     <div class="login-box">
         <h2>Register</h2>
         <form method = "POST">
