--- a/travels/templates/base.html
+++ b/travels/templates/base.html
@@ -10,6 +10,9 @@
         <title>Safe Journey</title>
     </head>
     <body>
+        {% block navbar %}
+        
+        {% endblock navbar %}
 
         {% block content %}
 
