--- a/travels/templates/navbar.html
+++ b/travels/templates/navbar.html
@@ -12,6 +12,11 @@
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href= "{% url 'travels:bookingHistory' %}">Booking History
+                <span class="sr-only">(current)</span>
+                </a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto nav-flex-icons">
             <li class="nav-item dropdown">
