--- a/travels/templates/booking.html
+++ b/travels/templates/booking.html
@@ -22,6 +22,21 @@
             margin: .5em 0 .75em;
             text-align: center;
         }
+        .button {
+            display: block;
+            width: 115px;
+            background: #4E9CAF;
+            padding: 7px;
+            text-align: center;
+            border-radius: 5px;
+            color: white;
+            font-weight: bold;
+            line-height: 25px;
+        }
+        a:hover {
+            color: blue;
+        }
+
     </style>
 
     <table class="table table-bordered table-hover">
@@ -31,27 +46,39 @@
             <th>#</th>
             <th>Train Name</th>
             <th>Available Seats</th>
+            <th>Src Departure</th>
+            <th>Dest Arrival</th>
+            <th>Fare</th>
             <th>Book Tickets</th>
         </tr>
         </thead>
         <tbody>    
         <tr>
             <th scope="row">1</th>
-            <td>{{ trainA }}</td>
+            <td style="width: 220px;">{{ trainA }}</td>
             <td>{{ seatsA }}</td>
-            <td><a href="{% url 'travels:bookingDetails' src dest trainA date %}">Book Now!</a></td>
+            <td>8:00</td>
+            <td>14:00</td>
+            <td style="width: 100px;">Rs 1000/-</td>
+            <td><a class="button" style="text-decoration: none;" href="{% url 'travels:bookingDetails' src dest trainA date %}">Book Now!</a></td>
         </tr>
         <tr>
             <th scope="row">2</th>
-            <td>{{ trainB }}</td>
+            <td style="width: 220px;">{{ trainB }}</td>
             <td>{{ seatsB }}</td>
-            <td><a href="{% url 'travels:bookingDetails' src dest trainB date %}">Book Now!</a></td>
-        </tr>
+            <td>12:00</td>
+            <td>18:00</td>
+            <td style="width: 100px;">Rs 1000/-</td>            
+            <td><a class="button" style="text-decoration: none;" href="{% url 'travels:bookingDetails' src dest trainB date %}">Book Now!</a></td>
+        </tr>     
         <tr>
             <th scope="row">3</th>
-            <td>{{ trainC }}</td>
+            <td style="width: 220px;">{{ trainC }}</td>
             <td>{{ seatsC }}</td>
-            <td><a href="{% url 'travels:bookingDetails' src dest trainC date %}">Book Now!</a></td>
+            <td>19:00</td>
+            <td>6:00</td>
+            <td style="width: 100px;">Rs 1000/-</td>            
+            <td><a class="button" style="text-decoration: none;" href="{% url 'travels:bookingDetails' src dest trainC date %}">Book Now!</a></td>
         </tr>
         </tbody>
     </table>
