--- a/travels/templates/dashboard.html
+++ b/travels/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block navbar %}
 
@@ -9,15 +10,18 @@
 {% block content %}
 
     <style>
-        p{
+        p {
             color: white;
         }
     </style>
 
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type = "submit">Submit</button>
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Search Trains</legend>
+            {{ form|crispy }} 
+        </fieldset>
+        <button type = "submit">Search</button>
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{message.tags}}" id="msg" role="alert">
@@ -26,7 +30,6 @@
             {% endfor %}
         {% endif %}
     </form>
-
     
     
 {% endblock content %}
