--- a/travels/templates/detail.html
+++ b/travels/templates/detail.html
@@ -14,7 +14,7 @@
         }
     </style>
 
-    <form method="POST">
+    {% comment %} <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         {{ form.errors }}
@@ -26,6 +26,44 @@
                 </div>
             {% endfor %}
         {% endif %} -->
-    </form>
+    </form> {% endcomment %}
+
+    <div class="login-box">
+        <h2>Book ticket</h2>
+        <form method = "POST">
+            {% csrf_token %}
+            <div class="user-box">
+                {{ form.username }}
+                {{ form.username.errors }}
+                <label>Username</label>
+            </div>
+            <div class="user-box">
+                {{ form.email }}
+                {{ form.email.errors }}                
+                <label>Email</label>
+            </div>
+            <div class="user-box">
+                {{ form.password1 }}
+                {{ form.password1.errors }}                
+                <label>Password</label>
+            </div>
+            <div class="user-box">
+                {{ form.password2 }}
+                {{ form.password2.errors }}                
+                <label>Confirm Password</label>
+            </div>
+            <a href="{% url 'travels:index' %}">
+                Back
+            </a>
+            <button id = "submit-button" type = "submit" style="float: right;">
+                Register
+            </button>
+        </form>
+        <div class = "mt-4">
+            <small class="text-muted">
+                Already have an account? <a href="{% url 'travels:login' %}" style = "color: white; padding: 4px 10px 4px 10px; text-decoration: none; border-radius: 15px">Sign In</a>
+            </small>
+        </div>
+    </div>    
 
 {% endblock content %}
