--- a/travels/templates/detail.html
+++ b/travels/templates/detail.html
@@ -9,61 +9,67 @@
 {% block content %}
 
     <style>
-        p{
-            color: white;
+        .login-box .user-box input {
+            margin-bottom: 10px;
         }
     </style>
-
-    {% comment %} <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {{ form.errors }}
-        <button type = "submit">Submit</button>
-        <!-- {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{message.tags}}" id="msg" role="alert">
-                    {{message}}
-                </div>
-            {% endfor %}
-        {% endif %} -->
-    </form> {% endcomment %}
 
     <div class="login-box">
         <h2>Book ticket</h2>
         <form method = "POST">
             {% csrf_token %}
             <div class="user-box">
-                {{ form.username }}
-                {{ form.username.errors }}
-                <label>Username</label>
+                {{ form.passenger1 }}
+                {{ form.passenger1.errors }}
+                <label>First Passenger Name</label>
+            </div>
+            <div class="user-box">
+                {{ form.age1 }}
+                {{ form.age1.errors }}                
+                <label>First Passenger Age</label>
+            </div>
+            <div class="user-box">
+                {{ form.passenger2 }}
+                {{ form.passenger2.errors }}                
+                <label>Second Passenger Name</label>
+            </div>
+            <div class="user-box">
+                {{ form.age2 }}
+                {{ form.age2.errors }}                
+                <label>Second Passenger Age</label>
+            </div>
+            <div class="user-box">
+                {{ form.passenger3 }}
+                {{ form.passenger3.errors }}                
+                <label>Third Passenger Name</label>
+            </div>
+            <div class="user-box">
+                {{ form.age3 }}
+                {{ form.age3.errors }}                
+                <label>Third Passenger Age</label>
+            </div>
+            <div class="user-box">
+                {{ form.phone }}
+                {{ form.phone.errors }}                
+                <label>Phone Number</label>
             </div>
             <div class="user-box">
                 {{ form.email }}
                 {{ form.email.errors }}                
-                <label>Email</label>
+                <label>Email Address</label>
             </div>
             <div class="user-box">
-                {{ form.password1 }}
-                {{ form.password1.errors }}                
-                <label>Password</label>
-            </div>
-            <div class="user-box">
-                {{ form.password2 }}
-                {{ form.password2.errors }}                
-                <label>Confirm Password</label>
+                {{ form.finalDest }}
+                {{ form.finalDest.errors }}                
+                <label>Final Destination</label>
             </div>
             <a href="{% url 'travels:index' %}">
                 Back
             </a>
             <button id = "submit-button" type = "submit" style="float: right;">
-                Register
+                Book
             </button>
         </form>
-        <div class = "mt-4">
-            <small class="text-muted">
-                Already have an account? <a href="{% url 'travels:login' %}" style = "color: white; padding: 4px 10px 4px 10px; text-decoration: none; border-radius: 15px">Sign In</a>
-            </small>
-        </div>
     </div>    
 
 {% endblock content %}
